# version-migrate

./: .gitignore  CHANGELOG.md  Cargo.toml  DIR_STORAGE_DESIGN.md  LICENSE-MIT  Makefile  README.md  release.toml
docs/design/: architecture.md
local-store/: Cargo.toml  README.md
local-store/src/: atomic_io.rs  dir_storage.rs  errors.rs  format_convert.rs  lib.rs  paths.rs  storage.rs
version-migrate/: Cargo.toml
version-migrate-macro/: Cargo.toml
version-migrate-macro/src/: lib.rs
version-migrate/src/: dir_storage.rs  errors.rs  forward.rs  lib.rs  migrator.rs  paths.rs  storage.rs  versioned_dir.rs  versioned_file.rs
version-migrate/tests/: async_test.rs  auto_tag_test.rs  config_migrator_test.rs  create_migrator_macro_test.rs  create_migrator_test.rs  create_migrator_vec_test.rs  custom_keys_test.rs  domain_save_by_name_test.rs  entity_save_test.rs  flat_format_test.rs  forward_compat_test.rs  integration_test.rs  large_migration_test.rs  large_migration_working_test.rs  macro_entity_save_test.rs  migrator_macro_test.rs  nested_migration_test.rs  queryable_macro_test.rs  runtime_override_test.rs  simple_vec_test.rs  standalone_queryable_test.rs
