[package]
name = "local-store"
version = "0.1.0"
edition = "2021"
description = "Local storage primitives: platform-agnostic paths, ACID file/dir storage, atomic IO, format dispatch"
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/local-store"
readme = "README.md"
keywords = ["storage", "filesystem", "config", "persistence", "atomic"]
categories = ["filesystem", "config"]

[dependencies]
dirs = "5.0"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
fs2 = "0.4"
base64 = "0.22.1"
urlencoding = "2.1.3"
tokio = { version = "1.0", features = ["fs", "macros", "rt", "io-util", "time"], optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = []
async = ["dep:tokio", "dep:async-trait"]

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
