[package]
name = "version-migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }
version-migrate-macro = { version = "0.1.0", path = "../version-migrate-macro" }

[dev-dependencies]
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
