[package]
name = "version-migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true, optional = true }
version-migrate-macro = { version = "0.11.0", path = "../version-migrate-macro" }
toml = "0.8"
fs2 = "0.4"
dirs = "5.0"
base64 = "0.22.1"
urlencoding = "2.1.3"
tokio = { version = "1.0", features = ["fs", "macros", "rt", "io-util", "time"], optional = true }

[dev-dependencies]
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
tempfile = "3.0"

[features]
default = []
async = ["dep:tokio", "dep:async-trait"]
